--- a/src/layouts/info/info.pug
+++ b/src/layouts/info/info.pug
@@ -3,7 +3,7 @@ mixin info
         +e('img').image(src="./img/main.jpg")
         
         +e.title-wrapper
-            +e('h1').title Конференция для дизайнеров <br/> арт-пространство BACKGROUND<br/> 20-21 сентября
+            +e('h1').title Всероссийская конференция для дизайнеров <br/> арт-пространство BACKGROUND<br/> 20-21 сентября
             +e('p').adress Москва, Фрунзенская набережная, 30
 
 
